changed imageAnalysis lambda to store analysed image labels in dynamodb when post request hits 'analysis' endpoint

--- a/serverless.yml
+++ b/serverless.yml
@@ -8,6 +8,7 @@ provider:
   runtime: nodejs18.x
   environment:
     DYNAMODB_CUSTOMER_TABLE: ${self:service}-customerTable-${sls:stage}
+    DYNAMODB_PROCESSED_IMAGE_LABEL_TABLE: ${self:service}-processedImageLabelTable-${sls:stage}
   apiGateway:
     binaryMediaTypes:
       - 'multipart/form-data'
@@ -21,7 +22,9 @@ provider:
             - 'dynamodb:Scan*'
             - 'dynamodb:UpdateItem'
             - 'dynamodb:DeleteItem'
-          Resource: arn:aws:dynamodb:${aws:region}:${aws:accountId}:table/${self:service}-customerTable-${sls:stage}
+          Resource:
+          - arn:aws:dynamodb:${aws:region}:${aws:accountId}:table/${self:service}-customerTable-${sls:stage}
+          - arn:aws:dynamodb:${aws:region}:${aws:accountId}:table/${self:service}-processedImageLabelTable-${sls:stage}
         - Effect: 'Allow'
           Action:
             - s3:*
@@ -31,6 +34,7 @@ provider:
             - "rekognition:*"
           Resource: "*"
 functions:
+#  Lambda functions
   createCustomer:
     handler: createCustomer.createCustomer
     events:
@@ -60,50 +64,11 @@ functions:
 resources:
   Resources:
     MyServerlessExampleBucket:
+#      S3 allows storage of media files, like a file storage system on a computer
       Type: AWS::S3::Bucket
       Properties:
         BucketName: serverlessexampledewi
-
-    # define a policy for an existing role
-#    UploadFilePolicy:
-#      Type: AWS::IAM::Policy
-#      Properties:
-#        PolicyName: UploadObjects
-#        PolicyDocument:
-#          Version: '2012-10-17'
-#          Statement:
-#            - Sid: LambdaPutObjects
-#              Effect: Allow
-#              Action:
-#                - s3:PutObject
-#                - s3:PutObjectTagging
-#              Resource:
-#                Fn::Join:
-#                  - ""
-#                  - - "arn:aws:s3:::"
-#                    - Ref: MyServerlessExampleBucket
-#                    - "/*"
-#        Roles:
-#          - serverless-example-dev-us-east-1-lambdaRole
-    #    DewiBucket:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: dewibucket
-#    DewiBucketAllowPublicReadPolicy:
-#      Type: AWS::S3::BucketPolicy
-#      Properties:
-#        Bucket: !Ref DewiBucket
-#        PolicyDocument:
-#          Version: "2012-10-17"
-#          Statement:
-#            - Effect: Allow
-#              Action:
-#                - "s3:GetObject"
-#              Resource:
-#                - !Sub "${DewiBucket.Arn}/*"
-#              Principal: "*"
-
-
+#        stores queryable data
     CustomerTable:
         Type: AWS::DynamoDB::Table
         Properties:
@@ -115,3 +80,14 @@ resources:
             - AttributeName: primary_key
               KeyType: HASH
           TableName: ${self:service}-customerTable-${sls:stage}
+    ProcessedImageLabelTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        AttributeDefinitions:
+          - AttributeName: primary_key
+            AttributeType: S
+        BillingMode: PAY_PER_REQUEST
+        KeySchema:
+          - AttributeName: primary_key
+            KeyType: HASH
+        TableName: ${self:service}-processedImageLabelTable-${sls:stage}
