changed s3 bucket name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "aws-sdk": "^2.1475.0",
-    "busboy": "^1.6.0"
+    "busboy": "^1.6.0",
+    "serverless": "^3.38.0"
   }
 }
